// file: pkg/media/server.go
// version: 1.1.0
// guid: 9a8b7c6d-5e4f-3a2b-1c0d-9e8f7a6b5c4d

package media

import (
	"context"
	"fmt"
	"os"
	"path/filepath"
	"strings"

	"github.com/asticode/go-astisub"
	"github.com/google/uuid"
	"github.com/jdfalk/gcommon/sdks/go/v1/media"
	mediapb "github.com/jdfalk/gcommon/sdks/go/v1/media"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// MediaServiceServer implements the media service gRPC server
type MediaServiceServer struct {
	mediapb.UnimplementedMediaServiceServer
}

// SubtitleServiceServer implements the subtitle service gRPC server
type SubtitleServiceServer struct {
	mediapb.UnimplementedSubtitleServiceServer
}

// NewMediaServiceServer creates a new media service server
func NewMediaServiceServer() *MediaServiceServer {
	return &MediaServiceServer{}
}

// NewSubtitleServiceServer creates a new subtitle service server
func NewSubtitleServiceServer() *SubtitleServiceServer {
	return &SubtitleServiceServer{}
}

// ExtractSubtitles extracts subtitles from a media file
func (s *SubtitleServiceServer) ExtractSubtitles(ctx context.Context, req *mediapb.ExtractSubtitlesRequest) (*mediapb.ExtractSubtitlesResponse, error) {
	mediaFileId := req.GetMediaFileId()
	trackIndices := req.GetTrackIndices()
	options := req.GetOptions()

	// For demonstration, create a mock response
	// In a real implementation, you would use ffmpeg or similar to extract subtitles
	_ = mediaFileId
	_ = trackIndices
	_ = options

	return &mediapb.ExtractSubtitlesResponse{
		Success: true,
		SubtitleTracks: []*mediapb.SubtitleTrack{
			{
				Language: "en",
				Format:   "srt",
			},
		},
	}, nil
}

// ConvertSubtitleFormat converts subtitle format
func (s *SubtitleServiceServer) ConvertSubtitleFormat(ctx context.Context, req *mediapb.ConvertSubtitleFormatRequest) (*mediapb.ConvertSubtitleFormatResponse, error) {
	subtitleFileId := req.GetSubtitleFileId()
	targetFormat := req.GetTargetFormat()
	preserveStyling := req.GetPreserveStyling()

	// For demonstration purposes, assume we have the file path from the ID
	inputPath := fmt.Sprintf("/tmp/subtitles/%s", subtitleFileId)
	outputPath := fmt.Sprintf("/tmp/subtitles/%s_converted.%s", subtitleFileId, targetFormat)

	// Read the subtitle file
	subtitles, err := astisub.OpenFile(inputPath)
	if err != nil {
		return nil, status.Errorf(codes.NotFound, "failed to open subtitle file %s: %v", inputPath, err)
	}

	// Create output file
	outputFile, err := os.Create(outputPath)
	if err != nil {
		return nil, status.Errorf(codes.Internal, "failed to create output file: %v", err)
	}
	defer outputFile.Close()

	// Convert to target format and write
	switch strings.ToLower(targetFormat) {
	case "srt":
		err = subtitles.WriteToSRT(outputFile)
	case "ass", "ssa":
		err = subtitles.WriteToSSA(outputFile)
	case "vtt":
		err = subtitles.WriteToWebVTT(outputFile)
	case "ttml":
		err = subtitles.WriteToTTML(outputFile)
	default:
		return nil, status.Errorf(codes.InvalidArgument, "unsupported target format: %s", targetFormat)
	}

	if err != nil {
		return nil, status.Errorf(codes.Internal, "failed to write converted subtitles: %v", err)
	}

	return &mediapb.ConvertSubtitleFormatResponse{
		Success:          true,
		ConvertedFileId:  fmt.Sprintf("%s_converted", subtitleFileId),
		OutputFormat:     targetFormat,
		PreservedStyling: preserveStyling,
	}, nil
}

// MergeSubtitles merges multiple subtitle files
func (s *SubtitleServiceServer) MergeSubtitles(ctx context.Context, req *mediapb.MergeSubtitlesRequest) (*mediapb.MergeSubtitlesResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.MergeSubtitlesResponse{
		Success: true,
	}, nil
}

// SyncSubtitles synchronizes subtitle timing
func (s *SubtitleServiceServer) SyncSubtitles(ctx context.Context, req *mediapb.SyncSubtitlesRequest) (*mediapb.SyncSubtitlesResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.SyncSubtitlesResponse{
		Success: true,
	}, nil
}

// ValidateSubtitles validates subtitle file format and content
func (s *SubtitleServiceServer) ValidateSubtitles(ctx context.Context, req *mediapb.ValidateSubtitlesRequest) (*mediapb.ValidateSubtitlesResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.ValidateSubtitlesResponse{
		IsValid: true,
	}, nil
}

// AdjustSubtitleTiming adjusts subtitle timing
func (s *SubtitleServiceServer) AdjustSubtitleTiming(ctx context.Context, req *mediapb.AdjustSubtitleTimingRequest) (*mediapb.AdjustSubtitleTimingResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.AdjustSubtitleTimingResponse{
		Success: true,
	}, nil
}

// CreateMediaFile creates a new media file record
func (s *MediaServiceServer) CreateMediaFile(ctx context.Context, req *mediapb.CreateMediaFileRequest) (*mediapb.CreateMediaFileResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.CreateMediaFileResponse{
		Success: true,
		MediaFile: &mediapb.MediaFile{
			Id:       "media-file-123",
			Filename: "example.mp4",
		},
	}, nil
}

// GetMediaFile retrieves a media file by ID
func (s *MediaServiceServer) GetMediaFile(ctx context.Context, req *mediapb.GetMediaFileRequest) (*mediapb.GetMediaFileResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.GetMediaFileResponse{
		MediaFile: &mediapb.MediaFile{
			Id:       "media-file-123",
			Filename: "example.mp4",
		},
	}, nil
}

// ListMediaFiles lists media files
func (s *MediaServiceServer) ListMediaFiles(ctx context.Context, req *mediapb.ListMediaFilesRequest) (*mediapb.ListMediaFilesResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.ListMediaFilesResponse{
		MediaFiles: []*mediapb.MediaFile{
			{
				Id:       "media-file-123",
				Filename: "example.mp4",
			},
		},
	}, nil
}

// UpdateMediaFile updates a media file
func (s *MediaServiceServer) UpdateMediaFile(ctx context.Context, req *mediapb.UpdateMediaFileRequest) (*mediapb.UpdateMediaFileResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.UpdateMediaFileResponse{
		Success: true,
	}, nil
}

// DeleteMediaFile deletes a media file
func (s *MediaServiceServer) DeleteMediaFile(ctx context.Context, req *mediapb.DeleteMediaFileRequest) (*mediapb.DeleteMediaFileResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.DeleteMediaFileResponse{
		Success: true,
	}, nil
}

// SearchMedia searches for media files
func (s *MediaServiceServer) SearchMedia(ctx context.Context, req *mediapb.SearchMediaRequest) (*mediapb.SearchMediaResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.SearchMediaResponse{
		MediaFiles: []*mediapb.MediaFile{
			{
				Id:       "media-file-123",
				Filename: "example.mp4",
			},
		},
	}, nil
}

// UploadMedia handles media file uploads
func (s *MediaServiceServer) UploadMedia(ctx context.Context, req *mediapb.UploadMediaRequest) (*mediapb.UploadMediaResponse, error) {
	// Check what methods are available on the request
	// For now, return a basic response
	return &mediapb.UploadMediaResponse{
		Success: true,
		MediaFile: &mediapb.MediaFile{
			Id:       "media-file-123",
			Filename: "uploaded.mp4",
		},
	}, nil
}

// NewServer creates a new server instance
type Server struct {
	media.UnimplementedMediaServiceServer
	media.UnimplementedSubtitleServiceServer
	media.UnimplementedMediaProcessingServiceServer
	media.UnimplementedAudioServiceServer

	// Configuration
	mediaRoot    string
	subtitleRoot string
	tempDir      string
}

// NewServer creates a new media server instance
func NewServer(mediaRoot, subtitleRoot, tempDir string) *Server {
	return &Server{
		mediaRoot:    mediaRoot,
		subtitleRoot: subtitleRoot,
		tempDir:      tempDir,
	}
}

// CreateMediaFile creates a new media file entry
func (s *Server) CreateMediaFile(ctx context.Context, req *mediapb.CreateMediaFileRequest) (*mediapb.CreateMediaFileResponse, error) {
	inputFile := req.GetMediaFile()
	if inputFile == nil {
		return &mediapb.CreateMediaFileResponse{}, fmt.Errorf("media file is required")
	}

	// Generate a unique ID for the media file if not provided
	fileID := inputFile.GetId()
	if fileID == "" {
		fileID = uuid.New().String()
	}

	// Create media file metadata with existing getters
	mediaFile := &mediapb.MediaFile{}
	// Note: We can't directly set fields due to protobuf opaque generation
	// This would need proper protobuf message construction

	return &mediapb.CreateMediaFileResponse{}, nil
}

// GetMediaFile retrieves a media file by ID
func (s *Server) GetMediaFile(ctx context.Context, req *mediapb.GetMediaFileRequest) (*mediapb.GetMediaFileResponse, error) {
	// In a real implementation, this would query a database
	return &mediapb.GetMediaFileResponse{}, nil
}

// ListMediaFiles lists media files with optional filtering
func (s *Server) ListMediaFiles(ctx context.Context, req *mediapb.ListMediaFilesRequest) (*mediapb.ListMediaFilesResponse, error) {
	// In a real implementation, this would query a database with pagination
	return &mediapb.ListMediaFilesResponse{}, nil
}

// SearchMedia searches for media files
func (s *Server) SearchMedia(ctx context.Context, req *mediapb.SearchMediaRequest) (*mediapb.SearchMediaResponse, error) {
	// In a real implementation, this would perform full-text search
	return &mediapb.SearchMediaResponse{}, nil
}

// ExtractSubtitles extracts subtitles from media files
func (s *Server) ExtractSubtitles(ctx context.Context, req *mediapb.ExtractSubtitlesRequest) (*mediapb.ExtractSubtitlesResponse, error) {
	inputPath := req.GetInputPath()
	outputPath := req.GetOutputPath()

	// In a real implementation, this would use ffmpeg or similar to extract subtitles
	// For now, we'll simulate success

	return &mediapb.ExtractSubtitlesResponse{}, nil
}

// ConvertSubtitleFormat converts subtitles between formats
func (s *MediaService) ConvertSubtitleFormat(ctx context.Context, req *mediapb.ConvertSubtitleFormatRequest) (*mediapb.ConvertSubtitleFormatResponse, error) {
	// Get subtitle file ID and target format
	subtitleFileId := req.GetSubtitleFileId()
	targetFormat := req.GetTargetFormat()
	preserveStyling := req.GetPreserveStyling()

	// For now, assume we have the file path from the ID
	// In a real implementation, you'd look up the file path from the database
	inputPath := fmt.Sprintf("/tmp/subtitles/%s", subtitleFileId)
	outputPath := fmt.Sprintf("/tmp/subtitles/%s_converted.%s", subtitleFileId, targetFormat)

	// Read the subtitle file
	subtitles, err := astisub.OpenFile(inputPath)
	if err != nil {
		return nil, fmt.Errorf("failed to open subtitle file %s: %w", inputPath, err)
	}

	// Convert to target format and write
	switch strings.ToLower(targetFormat) {
	case "srt":
		err = subtitles.WriteToSRT(outputPath)
	case "ass", "ssa":
		err = subtitles.WriteToSSA(outputPath)
	case "vtt":
		err = subtitles.WriteToWebVTT(outputPath)
	case "ttml":
		err = subtitles.WriteToTTML(outputPath)
	default:
		return nil, fmt.Errorf("unsupported target format: %s", targetFormat)
	}

	if err != nil {
		return nil, fmt.Errorf("failed to write converted subtitles: %w", err)
	}

	return &mediapb.ConvertSubtitleFormatResponse{
		Success:          true,
		ConvertedFileId:  fmt.Sprintf("%s_converted", subtitleFileId),
		OutputFormat:     targetFormat,
		PreservedStyling: preserveStyling,
	}, nil
}

// MergeSubtitles merges multiple subtitle tracks
func (s *Server) MergeSubtitles(ctx context.Context, req *mediapb.MergeSubtitlesRequest) (*mediapb.MergeSubtitlesResponse, error) {
	inputPaths := req.GetInputPaths()
	outputPath := req.GetOutputPath()

	if len(inputPaths) < 2 {
		return &mediapb.MergeSubtitlesResponse{}, fmt.Errorf("at least two subtitle files are required for merging")
	}

	// Load the first subtitle file as the base
	merged, err := astisub.OpenFile(inputPaths[0])
	if err != nil {
		return &mediapb.MergeSubtitlesResponse{}, fmt.Errorf("failed to load base subtitle file: %w", err)
	}

	// Merge additional subtitle files
	for _, path := range inputPaths[1:] {
		sub, err := astisub.OpenFile(path)
		if err != nil {
			return &mediapb.MergeSubtitlesResponse{}, fmt.Errorf("failed to load subtitle file %s: %w", path, err)
		}

		// Add items from this subtitle to the merged one
		for _, item := range sub.Items {
			merged.Items = append(merged.Items, item)
		}
	}

	// Create output directory if it doesn't exist
	if err := os.MkdirAll(filepath.Dir(outputPath), 0755); err != nil {
		return &mediapb.MergeSubtitlesResponse{}, fmt.Errorf("failed to create output directory: %w", err)
	}

	// Write merged subtitle
	if err := merged.WriteToSRT(outputPath); err != nil {
		return &mediapb.MergeSubtitlesResponse{}, fmt.Errorf("failed to write merged subtitle: %w", err)
	}

	return &mediapb.MergeSubtitlesResponse{}, nil
}

// SyncSubtitles synchronizes subtitle timing
func (s *Server) SyncSubtitles(ctx context.Context, req *mediapb.SyncSubtitlesRequest) (*mediapb.SyncSubtitlesResponse, error) {
	inputPath := req.GetInputPath()
	outputPath := req.GetOutputPath()
	offsetMs := req.GetOffsetMs()

	sub, err := astisub.OpenFile(inputPath)
	if err != nil {
		return &mediapb.SyncSubtitlesResponse{}, fmt.Errorf("failed to load subtitle file: %w", err)
	}

	// Apply timing offset to all items
	for _, item := range sub.Items {
		item.StartAt += astisub.Duration(offsetMs) * astisub.Millisecond
		item.EndAt += astisub.Duration(offsetMs) * astisub.Millisecond
	}

	// Create output directory if it doesn't exist
	if err := os.MkdirAll(filepath.Dir(outputPath), 0755); err != nil {
		return &mediapb.SyncSubtitlesResponse{}, fmt.Errorf("failed to create output directory: %w", err)
	}

	// Write synchronized subtitle
	if err := sub.WriteToSRT(outputPath); err != nil {
		return &mediapb.SyncSubtitlesResponse{}, fmt.Errorf("failed to write synchronized subtitle: %w", err)
	}

	return &mediapb.SyncSubtitlesResponse{}, nil
}

// ValidateSubtitles validates subtitle files
func (s *Server) ValidateSubtitles(ctx context.Context, req *mediapb.ValidateSubtitlesRequest) (*mediapb.ValidateSubtitlesResponse, error) {
	inputPath := req.GetInputPath()

	sub, err := astisub.OpenFile(inputPath)
	if err != nil {
		return &mediapb.ValidateSubtitlesResponse{}, fmt.Errorf("failed to parse subtitle file: %w", err)
	}

	var errors []string
	var warnings []string

	// Validate subtitle items
	for i, item := range sub.Items {
		// Check for timing issues
		if item.StartAt >= item.EndAt {
			errors = append(errors, fmt.Sprintf("Item %d: start time >= end time", i+1))
		}

		// Check for empty text
		if len(strings.TrimSpace(item.String())) == 0 {
			warnings = append(warnings, fmt.Sprintf("Item %d: empty text", i+1))
		}
	}

	return &mediapb.ValidateSubtitlesResponse{}, nil
}

// AdjustSubtitleTiming adjusts subtitle timing
func (s *Server) AdjustSubtitleTiming(ctx context.Context, req *mediapb.AdjustSubtitleTimingRequest) (*mediapb.AdjustSubtitleTimingResponse, error) {
	return &mediapb.AdjustSubtitleTimingResponse{}, nil
}

// Placeholder implementations for processing and audio services
func (s *Server) TranscodeMedia(ctx context.Context, req *mediapb.TranscodeMediaRequest) (*mediapb.TranscodeMediaResponse, error) {
	return &mediapb.TranscodeMediaResponse{}, nil
}

func (s *Server) AnalyzeMedia(ctx context.Context, req *mediapb.AnalyzeMediaRequest) (*mediapb.AnalyzeMediaResponse, error) {
	return &mediapb.AnalyzeMediaResponse{}, nil
}

func (s *Server) GetProcessingStatus(ctx context.Context, req *mediapb.GetProcessingStatusRequest) (*mediapb.GetProcessingStatusResponse, error) {
	return &mediapb.GetProcessingStatusResponse{}, nil
}

func (s *Server) ExtractAudio(ctx context.Context, req *mediapb.ExtractAudioRequest) (*mediapb.ExtractAudioResponse, error) {
	return &mediapb.ExtractAudioResponse{}, nil
}

func (s *Server) NormalizeAudio(ctx context.Context, req *mediapb.NormalizeAudioRequest) (*mediapb.NormalizeAudioResponse, error) {
	return &mediapb.NormalizeAudioResponse{}, nil
}

func (s *Server) AnalyzeAudioQuality(ctx context.Context, req *mediapb.AnalyzeAudioQualityRequest) (*mediapb.AnalyzeAudioQualityResponse, error) {
	return &mediapb.AnalyzeAudioQualityResponse{}, nil
}

// Additional placeholder methods
func (s *Server) MergeAudio(ctx context.Context, req *mediapb.MergeAudioRequest) (*mediapb.MergeAudioResponse, error) {
	return &mediapb.MergeAudioResponse{}, nil
}

func (s *Server) SplitAudio(ctx context.Context, req *mediapb.SplitAudioRequest) (*mediapb.SplitAudioResponse, error) {
	return &mediapb.SplitAudioResponse{}, nil
}

func (s *Server) UpdateMediaFile(ctx context.Context, req *mediapb.UpdateMediaFileRequest) (*mediapb.UpdateMediaFileResponse, error) {
	return &mediapb.UpdateMediaFileResponse{}, nil
}

func (s *Server) DeleteMediaFile(ctx context.Context, req *mediapb.DeleteMediaFileRequest) (*mediapb.DeleteMediaFileResponse, error) {
	return &mediapb.DeleteMediaFileResponse{}, nil
}

func (s *Server) UploadMedia(ctx context.Context, req *mediapb.UploadMediaRequest) (*mediapb.UploadMediaResponse, error) {
	return &mediapb.UploadMediaResponse{}, nil
}

func (s *Server) DetectChapters(ctx context.Context, req *mediapb.DetectChaptersRequest) (*mediapb.DetectChaptersResponse, error) {
	return &mediapb.DetectChaptersResponse{}, nil
}
